hphp/hack/test/typecheck/disjoint/enum.php.exp
ERROR: File "enum.php", line 37, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 37, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(E2 & E1)`
ERROR: File "enum.php", line 37, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 37, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 37, characters 8-9:
  But got `arraykey`
  File "enum.php", line 3, characters 57-58:
    via this generic `T1`
  File "enum.php", line 37, characters 8-9:
    by the definition of `E1` arising from an implicit `as arraykey` constraint on this type
ERROR: File "enum.php", line 37, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 37, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 37, characters 12-13:
  But got `arraykey`
  File "enum.php", line 3, characters 52-53:
    via this generic `T2`
  File "enum.php", line 37, characters 12-13:
    by the definition of `E2` arising from an implicit `as arraykey` constraint on this type
ERROR: File "enum.php", line 40, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 40, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(E5 & E1)`
ERROR: File "enum.php", line 40, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 40, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 40, characters 8-9:
  But got `arraykey`
  File "enum.php", line 3, characters 57-58:
    via this generic `T1`
  File "enum.php", line 40, characters 8-9:
    by the definition of `E1` arising from an implicit `as arraykey` constraint on this type
ERROR: File "enum.php", line 40, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 40, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 40, characters 12-13:
  But got `string`
  File "enum.php", line 3, characters 52-53:
    via this generic `T2`
  File "enum.php", line 26, characters 21-26:
    by the definition of `E5`
ERROR: File "enum.php", line 41, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 41, characters 20-26:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(string & E1)`
ERROR: File "enum.php", line 41, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 41, characters 20-26:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 41, characters 8-9:
  But got `arraykey`
  File "enum.php", line 3, characters 57-58:
    via this generic `T1`
  File "enum.php", line 41, characters 8-9:
    by the definition of `E1` arising from an implicit `as arraykey` constraint on this type
ERROR: File "enum.php", line 41, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 41, characters 20-26:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 41, characters 12-17:
  But got `string`
  File "enum.php", line 3, characters 52-53:
    via this generic `T2`
ERROR: File "enum.php", line 42, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 42, characters 17-23:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(E1 & int)`
ERROR: File "enum.php", line 42, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 42, characters 17-23:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 42, characters 8-10:
  But got `int`
  File "enum.php", line 3, characters 57-58:
    via this generic `T1`
ERROR: File "enum.php", line 42, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 42, characters 17-23:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 42, characters 13-14:
  But got `arraykey`
  File "enum.php", line 3, characters 52-53:
    via this generic `T2`
  File "enum.php", line 42, characters 13-14:
    by the definition of `E1` arising from an implicit `as arraykey` constraint on this type
ERROR: File "enum.php", line 43, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 43, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(E5 & E4)`
ERROR: File "enum.php", line 43, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 43, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 43, characters 8-9:
  But got `string`
  File "enum.php", line 3, characters 57-58:
    via this generic `T1`
  File "enum.php", line 22, characters 21-26:
    by the definition of `E4`
ERROR: File "enum.php", line 43, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 43, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 43, characters 12-13:
  But got `string`
  File "enum.php", line 3, characters 52-53:
    via this generic `T2`
  File "enum.php", line 26, characters 21-26:
    by the definition of `E5`
ERROR: File "enum.php", line 46, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 46, characters 22-28:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 46, characters 18-19:
  But got `arraykey`
  File "enum.php", line 3, characters 52-53:
    via this generic `T2`
  File "enum.php", line 46, characters 18-19:
    by the definition of `E1` arising from an implicit `as arraykey` constraint on this type
